wip: feat: time line reports